@@ -1,3 +1,8 @@
+** v4.42, 19.01.2020**
+* Fixed Aura positions in my Install.
+* Fixed a quest lua error. Damn tables >.<
+
+
 ** v4.41, 18.01.2020**
 * Change the default position from the "new" Vehicle Exit Button.
 * Enable "Swap to AltPower" on Party Frames.
