@@ -1,6 +1,6 @@
 ## Interface: 80300
 ## Author: Merathilis
-## Version: 4.41
+## Version: 4.42
 ## Title: |cFF00c0faElvUI|r |cffff7d0aMerathilisUI|r
 ## Notes: A decorative edit for ElvUI + additional features.
 ## Notes-deDE: Eine dekorative Erweiterung für ElvUI + einige zusätzliche Funktionen.
@@ -10,8 +10,8 @@
 ## SavedVariablesPerCharacter: MERDataPerChar
 ## OptionalDeps: SharedMedia, BigWigs, ls_Toasts
 ## X-Credits: Benik, Blazeflack, Azilroka, Simpy, NihilisticPandemonium, Darth Predator, fgprodigal, siweia, Solor, Elv & all AddOn Authors who inspired me.
-## X-ElvVersion: 11.311
-## X-Curse-Packaged-Version: 4.41
+## X-ElvVersion: 11.312
+## X-Curse-Packaged-Version: 4.42
 ## X-Curse-Project-Name: MerathilisUI
 ## X-Curse-Project-ID: merathilis-ui
 ## X-Tukui-ProjectID: 1
